// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`elements/content-sidebar/ActivityFeed/task-new/AssigneeDetails should render details for status APPROVED 1`] = `
<Memo()
  completedAt="2019-01-01T00:00:000Z"
  status="APPROVED"
  user={
    Object {
      "id": "123",
      "name": "user one",
    }
  }
>
  <div
    className="bcs-AssigneeDetails"
  >
    <div
      className="bcs-AssigneeDetails-name"
    >
      user one
    </div>
    <div
      className="bcs-AssigneeDetails-status"
    >
      <FormattedMessage
        defaultMessage="Approved {dateTime}"
        id="be.contentSidebar.activityFeed.taskNew.tasksFeedStatusApproved"
        values={
          Object {
            "dateTime": <Datestamp
              date="2019-01-01T00:00:000Z"
            />,
          }
        }
      >
        <div />
      </FormattedMessage>
    </div>
  </div>
</Memo()>
`;

exports[`elements/content-sidebar/ActivityFeed/task-new/AssigneeDetails should render details for status APPROVED 2`] = `
<Memo()
  completedAt={2019-01-01T00:00:00.000Z}
  status="APPROVED"
  user={
    Object {
      "id": "123",
      "name": "user one",
    }
  }
>
  <div
    className="bcs-AssigneeDetails"
  >
    <div
      className="bcs-AssigneeDetails-name"
    >
      user one
    </div>
    <div
      className="bcs-AssigneeDetails-status"
    >
      <FormattedMessage
        defaultMessage="Approved {dateTime}"
        id="be.contentSidebar.activityFeed.taskNew.tasksFeedStatusApproved"
        values={
          Object {
            "dateTime": <Datestamp
              date={2019-01-01T00:00:00.000Z}
            />,
          }
        }
      >
        <div />
      </FormattedMessage>
    </div>
  </div>
</Memo()>
`;

exports[`elements/content-sidebar/ActivityFeed/task-new/AssigneeDetails should render details for status NOT_STARTED 1`] = `
<Memo()
  completedAt="2019-01-01T00:00:000Z"
  status="NOT_STARTED"
  user={
    Object {
      "id": "123",
      "name": "user one",
    }
  }
>
  <div
    className="bcs-AssigneeDetails"
  >
    <div
      className="bcs-AssigneeDetails-name"
    >
      user one
    </div>
  </div>
</Memo()>
`;

exports[`elements/content-sidebar/ActivityFeed/task-new/AssigneeDetails should render details for status REJECTED 1`] = `
<Memo()
  completedAt="2019-01-01T00:00:000Z"
  status="REJECTED"
  user={
    Object {
      "id": "123",
      "name": "user one",
    }
  }
>
  <div
    className="bcs-AssigneeDetails"
  >
    <div
      className="bcs-AssigneeDetails-name"
    >
      user one
    </div>
    <div
      className="bcs-AssigneeDetails-status"
    >
      <FormattedMessage
        defaultMessage="Rejected {dateTime}"
        id="be.contentSidebar.activityFeed.taskNew.tasksFeedStatusRejected"
        values={
          Object {
            "dateTime": <Datestamp
              date="2019-01-01T00:00:000Z"
            />,
          }
        }
      >
        <div />
      </FormattedMessage>
    </div>
  </div>
</Memo()>
`;

exports[`elements/content-sidebar/ActivityFeed/task-new/AssigneeDetails should render details for status invalid_string 1`] = `
<Memo()
  completedAt="2019-01-01T00:00:000Z"
  status="invalid_string"
  user={
    Object {
      "id": "123",
      "name": "user one",
    }
  }
>
  <div
    className="bcs-AssigneeDetails"
  >
    <div
      className="bcs-AssigneeDetails-name"
    >
      user one
    </div>
  </div>
</Memo()>
`;

exports[`elements/content-sidebar/ActivityFeed/task-new/AssigneeDetails should render details for status null 1`] = `
<Memo()
  completedAt={2019-01-01T00:00:00.000Z}
  status={null}
  user={
    Object {
      "id": "123",
      "name": "user one",
    }
  }
>
  <div
    className="bcs-AssigneeDetails"
  >
    <div
      className="bcs-AssigneeDetails-name"
    >
      user one
    </div>
  </div>
</Memo()>
`;
